After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 677930 - user-accounts: Fix memory leak in create_user_done()
user-accounts: Fix memory leak in create_user_done()
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: User Accounts
unspecified
Other All
: Normal normal
: ---
Assigned To: Control-Center Maintainers
Control-Center Maintainers
Depends on:
Blocks: 677548
 
 
Reported: 2012-06-12 08:57 UTC by Stef Walter
Modified: 2012-06-12 10:00 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
user-accounts: Fix memory leak in create_user_done() (2.66 KB, patch)
2012-06-12 08:57 UTC, Stef Walter
committed Details | Review

Description Stef Walter 2012-06-12 08:57:08 UTC
g_dbus_error_get_remote_error() returns an allocated string.
Comment 1 Stef Walter 2012-06-12 08:57:10 UTC
Created attachment 216180 [details] [review]
user-accounts: Fix memory leak in create_user_done()

g_dbus_error_get_remote_error() returns an allocated string
Comment 2 Bastien Nocera 2012-06-12 09:08:48 UTC
Review of attachment 216180 [details] [review]:

Looks good.