user-accounts: Fix memory leak in create_user_done()

g_dbus_error_get_remote_error() returns an allocated string

https://bugzilla.gnome.org/show_bug.cgi?id=677930